tool-panel / fix resizable handle z-index

--- a/css/tool_panel.css
+++ b/css/tool_panel.css
@@ -64,6 +64,7 @@
   border-bottom: 1px solid var(--border-color);
   top: 0;
   left: 10px;
+  z-index: 10 !important;
   width: calc(100% - 20px);
   display: none;
 }
@@ -72,6 +73,7 @@
   border-left: 1px solid var(--border-color);
   right: 0;
   top: 10px;
+  z-index: 10 !important;
   height: calc(100% - 20px);
 }
 
